# clambro.github.io

./: .eslintrc.cjs  .pre-commit-config.yaml  README.md  astro.config.mjs  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: check-links.yml  deploy-mkdocs.yml  deploy.yml
docs/: index.md
public/: robots.txt
src/: config.ts
src/components/: InfinityMirror.astro  ProjectPreview.astro  TagFilter.astro
src/content/: config.ts
src/content/blog/2025/: black-hole-thesis.md  example-post.md  spaghetti-memories.md  welcome.md
src/content/projects/: genetic-2048.md  personal-website.md  pokemon-ai.md
src/content/projects/2021/: genetic-2048.md
src/content/projects/2025/: black-hole-thesis.md  personal-website.md  pokemon-ai.md
src/layouts/: BaseLayout.astro
src/pages/: 404.astro  feed.xml.ts  index.astro
src/pages/blog/: [...slug].astro  index.astro
src/pages/projects/: [...slug].astro  [slug].astro  index.astro  pokemon-ai.astro
src/pages/resume/: index.astro
src/styles/: global.css
src/types/: blog_tag.ts
src/utils/: date.ts
