[project]
name = "clambro.github.io"
version = "0.1.0"
description = "Personal website built with MkDocs"
authors = [{ name = "Costa Lambrinoudis", email = "clambro.git@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.18,<10",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0.0,<4",
]

[tool.uv]
package = false
